# FlexuraNote-code

./: CMakeLists.txt  CMakeLists.txt.user.MrQLJE  CMakeLists.txt.user.jqYxxN  FlexuraNote.cpp  FlexuraNote.h  FlexuraNote.ui  HStatus_bar.h  MultiCursor.cpp  MultiCursor.h  README.md  Resources.qrc  count_time_autosave.ui  findwindow.cpp  findwindow.h  findwindow.ui  fusionnote.cpp  fusionnote.h  fusionnote.ui  helper_color_text.cpp  helper_color_text.h  helper_file.cpp  helper_file.h  helper_font_text.cpp  helper_font_text.h  helper_image.cpp  helper_image.h  helper_status_bar.cpp  helper_status_bar.h  helper_theme.cpp  helper_theme.h  infowindow.cpp  infowindow.h  infowindow.ui  main.cpp  replacewindow.cpp  replacewindow.h  replacewindow.ui  rtfparser.cpp  rtfparser.h  zoomabletextedit.cpp  (+1 more)
